# pointcloud_to_grid

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
cfg/: MyParams.cfg
doc/: default.rviz
include/pointcloud_to_grid/: marker.hpp  point.h  pointcloud_to_grid_core.hpp  trajectory.hpp
launch/: demo.launch  demo.launch.py  grid_trajectory.launch.py  rviz.launch  rviz.launch.py
notebooks/: lidar_angle_calc.ipynb
src/: grid_trajectory.cpp  pointcloud_to_grid_node.cpp
